<resources>
    <string name="app_name">VerizonTags</string>
    <string name="action_settings">Settings</string>
    <string name="action_accending">Accending</string>
    <string name="action_decending">Decending</string>
    <string name="action_copy_list">Copy List Item</string>
    <string name="action_delete_all">Delete All Tags</string>
    <string name="action_max_occurence">Max Occurence</string>
</resources>
